--- a/templates/index.html
+++ b/templates/index.html
@@ -1470,13 +1470,18 @@
 {#轮播图#}
     <div class="m-bannerBox">
         <ul id="slide1">
-            <li><img src="{{ img_src1 }}" alt=""/></li>
-            <li><img src="{{ img_src2 }}" alt=""/></li>
-            <li><img src="{{ img_src3 }}" alt=""/></li>
-            <li><img src="{{ img_src4 }}" alt=""/></li>
-            <li><img src="{{ img_src5 }}" alt=""/></li>
-            <li><img src="{{ img_src6 }}" alt=""/></li>
-            <li><img src="{{ img_src7 }}" alt=""/></li>
+{#            <li><img src="{{ img_src1 }}" alt=""/></li>#}
+{#            <li><img src="{{ img_src2 }}" alt=""/></li>#}
+{#            <li><img src="{{ img_src3 }}" alt=""/></li>#}
+{#            <li><img src="{{ img_src4 }}" alt=""/></li>#}
+{#            <li><img src="{{ img_src5 }}" alt=""/></li>#}
+{#            <li><img src="{{ img_src6 }}" alt=""/></li>#}
+{#            <li><img src="{{ img_src7 }}" alt=""/></li>#}
+{#            遍历法#
+            {% for img_src in img_srcs %}
+{#                src_img = '/static/' + {{ img_src.img_src }}#}
+                <li><img src="{% static   img_src.img_src %}"></li>
+            {% endfor %}
 
             {#        <li style="display:flex;align-itms:center;justify-content:center;width:100%;height:100%;background-color:#fff;"><img src="{% static 'img/loading2.gif' %}" alt="" class="loadingPic" style="width:100px;height:100px"></li>#}
         </ul>
