--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="{% static 'css/normalize.css/normalize.css' %}" media="screen" title="no title"
           charset="utf-8">
     <!-- <link rel="stylesheet" href="css/main.css" media="screen" title="no title"> -->
+    <link rel="stylesheet" href="{% static 'css/swiper.css' %}">
     <link rel="stylesheet" href="{% static 'css/index.css' %}" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="{% static 'demo/triangle.css' %}" media="screen" title="no title">
     <link rel="Shortcut Icon" href={% static 'favicon.ico' %}>
@@ -1467,47 +1468,37 @@
     </div>
 </nav>
 <div class="main-Wrap">
-{#轮播图#}
-    <div class="m-bannerBox">
-        <ul id="slide1">
-{#            <li><img src="{{ img_src1 }}" alt=""/></li>#}
-{#            <li><img src="{{ img_src2 }}" alt=""/></li>#}
-{#            <li><img src="{{ img_src3 }}" alt=""/></li>#}
-{#            <li><img src="{{ img_src4 }}" alt=""/></li>#}
-{#            <li><img src="{{ img_src5 }}" alt=""/></li>#}
-{#            <li><img src="{{ img_src6 }}" alt=""/></li>#}
-{#            <li><img src="{{ img_src7 }}" alt=""/></li>#}
-{#            遍历法#
-            {% for img_src in img_srcs %}
-{#                src_img = '/static/' + {{ img_src.img_src }}#}
-                <li><img src="{% static   img_src.img_src %}"></li>
-            {% endfor %}
+{#    <div class="m-bannerBox" id="topSwiper">#}
+    <div class="swiper-container" id="topSwiper">
+        {#    轮播图#}
+        <div class="swiper-wrapper">
+                {% for img_src in img_srcs %}
+                    <div class="swiper-slide">
+                    <img src="{% static img_src.img_src %}" id="slide_img">
+                    </div>
+                {% endfor %}
 
-            {#        <li style="display:flex;align-itms:center;justify-content:center;width:100%;height:100%;background-color:#fff;"><img src="{% static 'img/loading2.gif' %}" alt="" class="loadingPic" style="width:100px;height:100px"></li>#}
-        </ul>
-        <i class="icon icon-angle-left prevArrow" id="prevArrow"></i>
-        <i class="icon icon-angle-right nextArrow" id="nextArrow"></i>
-        <ol id="slide2">
-            <li class="active1"></li>
-            <li></li>
-            <li></li>
-            <li></li>
-        </ol>
+        </div>
+
+            <div class="swiper-pagination" ></div>
+            <div class="swiper-button-next" style="margin-right: 630px"></div>
+            <div class="swiper-button-prev" style="margin-left: 300px"></div>
     </div>
 
-    {#轮播#}
-    <section class="m-sellpoint clearfix">
-        <div class="sellpoint-Wrap">
-            <div class="sellpointL">
-                <a href="javascript:"><i></i>100%正品</a>
-                <a href="javascript:"><i></i>7天无忧退货</a>
-                <a href="javascript:"><i></i>满88包邮（特殊商品除外）</a>
-            </div>
-            <div class="notice">
-                <a href="javascript:"><i></i>国庆礼包390速抢</a>
-            </div>
-        </div>
-    </section>
+
+    {#轮播2#}
+    {#    <section class="m-sellpoint clearfix">#}
+    {#        <div class="sellpoint-Wrap">#}
+    {#            <div class="sellpointL">#}
+    {#                <a href="javascript:"><i></i>100%正品</a>#}
+    {#                <a href="javascript:"><i></i>7天无忧退货</a>#}
+    {#                <a href="javascript:"><i></i>满88包邮（特殊商品除外）</a>#}
+    {#            </div>#}
+    {#            <div class="notice">#}
+    {#                <a href="javascript:"><i></i>国庆礼包390速抢</a>#}
+    {#            </div>#}
+    {#        </div>#}
+    {#    </section>#}
     <section class="m-promotions">
         <ul>
             <li><a href="javascript:"><img src="{% static 'img/itfp4mux10_265_220.jpg' %}" alt=""></a></li>
@@ -3691,7 +3682,8 @@
         </div>
     </div>
 </footer>
-<script src="{% static 'js/vendor/jquery-3.1.0.min.js' %}" charset="utf-8"></script>
+<script src="{% static 'js/vendor/jquery.js' %}" charset="utf-8"></script>
+<script src="{% static 'js/vendor/swiper.js' %}" charset="utf-8"></script>
 <script src="{% static 'js/vendor/jquery.cookie.js' %}" charset="utf-8"></script>
 <script src="{% static 'js/index.js' %}" charset="utf-8"></script>
 </html>
