--- a/templates/index.html
+++ b/templates/index.html
@@ -25,8 +25,8 @@
 <nav class="hd-NavTop">
     <div class="hd-NavTopL1">
         考拉欢迎你！
-        {% if username %}
-            {{ username }}
+        {% if account %}
+            {{ account }}
             <span>|</span>
             <a href="/loginout/">退出登录</a>
         {% else %}
