--- a/templates/login.html
+++ b/templates/login.html
@@ -3,96 +3,102 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>登录-网易考拉海购</title>
-  <link rel="stylesheet" href="{% static 'css/main.css' %}" media="screen" title="no title" charset="utf-8">
-  <link rel="stylesheet" href="{% static 'css/signin.css' %}" media="screen" title="no title" charset="utf-8">
-  <link rel ="Shortcut Icon" href={% static 'favicon.ico' %}>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>登录-网易考拉海购</title>
+    <link rel="stylesheet" href="{% static 'css/main.css' %}" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="{% static 'css/signin.css' %}" media="screen" title="no title" charset="utf-8">
+    <link rel="Shortcut Icon" href={% static 'favicon.ico' %}>
 </head>
 <body>
-  <header class="hd-sign">
+<header class="hd-sign">
     <div class="hd-activeBanner">
-      <img src="{% static 'img/itjzo9dt17_1920_100.jpg' %}" alt="" />
-      <a href="#"></a>
+        <img src="{% static 'img/itjzo9dt17_1920_100.jpg' %}" alt=""/>
+        <a href="#"></a>
     </div>
     <div class="hd-sign-sellpoint">
-      <div class="kaolaLogo"><a href="https://github.com/fguizc/NetEaseKaoLa" style="width:100%;height:100%;display:inline-block"></a></div>
-      <div class="sellpoint"></div>
+        <div class="kaolaLogo"><a href="https://github.com/fguizc/NetEaseKaoLa"
+                                  style="width:100%;height:100%;display:inline-block"></a></div>
+        <div class="sellpoint"></div>
     </div>
-  </header>
-  <div class="m-sign">
+</header>
+<div class="m-sign">
     <div class="m-sign-wrap">
-      <a href="#" class="active-page"></a>
-      <div class="sign-form clearfix">
-        <div class="signBox">
-          <h2>登录网易邮箱账号</h2>
-          <form action="/login/", method="post">
-              {% csrf_token %}
-            <div class="usernameBox">
-              <input type="text" placeholder="网易邮箱账号" id="userName" class="ipt-username" name="username">
-              <i class="icon icon-username"></i>
-              <i class="cls-clear"></i>
+        <a href="#" class="active-page"></a>
+        <div class="sign-form clearfix">
+            <div class="signBox">
+                <h2>登录网易邮箱账号</h2>
+                <form action="/login/" , method="post">
+                    {% csrf_token %}
+                    <div class="usernameBox">
+                        <input type="text" placeholder="网易邮箱账号" id="userName" class="ipt-username" name="account">
+
+                        <i class="icon icon-username"></i>
+                        <i class="cls-clear"></i>
+                        <br>
+                        <b style="color: red">{{ acountErr }}</b>
+                    </div>
+                    <div class="userpassBox">
+                        <input type="password" placeholder="密码" id="userPass" class="ipt-password" name="password">
+                        <i class="icon icon-password"></i>
+                        <i class="cls-clear"></i>
+                        <br>
+                        <b style="color: red">{{ passwdErr }}</b>
+                    </div>
+                    <div class="free-sign clearfix">
+                        <div class="free-box">
+                            <input type="checkbox" name="remeber" id="remeber-signin">
+                            <label for="remeber-signin">十天内免费登录</label>
+                        </div>
+                        <a href="#">忘记密码?</a>
+                    </div>
+                    <input type="submit" class="btn-signin" value="登录" id="subButton">
+                </form>
+                <div class="toLogin">
+                    <span>没有网易邮箱?</span>
+                    <a href="/register/">立即免费注册&gt;&gt;</a>
+                </div>
+                <div class="sign-sns">
+                    <span>使用第三方账号登录：</span>
+                    <i class="icon-sns wechat"></i>
+                    <i class="icon-sns alipay"></i>
+                    <i class="icon-sns weibo"></i>
+                    <i class="icon-sns qq"></i>
+                </div>
             </div>
-            <div class="userpassBox">
-              <input type="password"  placeholder="密码" id="userPass" class="ipt-password" name="password">
-              <i class="icon icon-password"></i>
-              <i class="cls-clear"></i>
+            <div class="qrcode">
+                <img src="{% static 'img/ir76kill77_146_338.jpg' %}" alt="download Kaola App by QR code"/>
             </div>
-            <div class="free-sign clearfix">
-              <div class="free-box">
-                <input type="checkbox" name="remeber" id="remeber-signin">
-                <label for="remeber-signin">十天内免费登录</label>
-              </div>
-              <a href="#">忘记密码?</a>
-            </div>
-            <input type="submit" class="btn-signin" value="登录">
-          </form>
-          <div class="toLogin">
-            <span>没有网易邮箱?</span>
-            <a href="/register/">立即免费注册&gt;&gt;</a>
-          </div>
-          <div class="sign-sns">
-            <span>使用第三方账号登录：</span>
-            <i class="icon-sns wechat"></i>
-            <i class="icon-sns alipay"></i>
-            <i class="icon-sns weibo"></i>
-            <i class="icon-sns qq"></i>
-          </div>
         </div>
-        <div class="qrcode">
-          <img src="{% static 'img/ir76kill77_146_338.jpg' %}" alt="download Kaola App by QR code" />
-        </div>
-      </div>
     </div>
-  </div>
-  <footer class="ft-sign">
+</div>
+<footer class="ft-sign">
     <ul class="about-Netease">
-      <li>About Netease</li>
-      <li>公司简介</li>
-      <li>联系方法</li>
-      <li>友情链接</li>
-      <li>招聘信息</li>
-      <li>客户服务</li>
-      <li>隐私政策</li>
-      <li>网络营销</li>
-      <li>网站地图</li>
-      <li>网易考拉海购</li>
+        <li>About Netease</li>
+        <li>公司简介</li>
+        <li>联系方法</li>
+        <li>友情链接</li>
+        <li>招聘信息</li>
+        <li>客户服务</li>
+        <li>隐私政策</li>
+        <li>网络营销</li>
+        <li>网站地图</li>
+        <li>网易考拉海购</li>
     </ul>
     <ul class="about-website">
-      <li><i></i>浙公网安备 33010002000066号 </li>
-      <li>增值电信业务经营许可证：浙B2-20090185-3 </li>
-      <li>网络文化经营许可证：浙网文[2016]0155-055号</li>
-      <li>网易公司版权所有©1997-2016</li>
+        <li><i></i>浙公网安备 33010002000066号</li>
+        <li>增值电信业务经营许可证：浙B2-20090185-3</li>
+        <li>网络文化经营许可证：浙网文[2016]0155-055号</li>
+        <li>网易公司版权所有©1997-2016</li>
     </ul>
     <div class="about-Trusted">
-      <img src="{% static 'img/d720d83b55a04b6f932ea845c673c5bf.png' %}" alt="" />
-      <img src="{% static 'img/db9ba5060e9e49fabf3f6cc4b8b6ccf7.jpg' %}" alt="" />
+        <img src="{% static 'img/d720d83b55a04b6f932ea845c673c5bf.png' %}" alt=""/>
+        <img src="{% static 'img/db9ba5060e9e49fabf3f6cc4b8b6ccf7.jpg' %}" alt=""/>
     </div>
-  </footer>
-  <script src="{% static 'js/vendor/jquery-3.1.0.min.js' %}" charset="utf-8"></script>
-  <script src="/static/js/vendor/jquery.cookie.js" charset="utf-8"></script>
-  <script src="/static/js/signin.js" charset="utf-8"></script>
+</footer>
+<script src="{% static 'js/vendor/jquery.js' %}" charset="utf-8"></script>
+<script src="/static/js/vendor/jquery.cookie.js" charset="utf-8"></script>
+<script src="/static/js/signin.js" charset="utf-8"></script>
 </body>
 </html>
