--- a/templates/goodDetail.html
+++ b/templates/goodDetail.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,25 +6,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>网易考拉海淘-商品详情页</title>
-  <link rel="stylesheet" href="css/index.css" media="screen" title="no title">
-  <link rel="stylesheet" href="css/goodDetail.css" media="screen" title="no title">
-  <link rel="stylesheet" href="demo/dialog.css" media="screen" title="no title">
-  <link rel="stylesheet" href="demo/triangle.css">
-  <link rel ="Shortcut Icon" href=favicon.ico>
+  <link rel="stylesheet" href="{% static 'css/index.css' %}" media="screen" title="no title">
+  <link rel="stylesheet" href="{% static 'css/goodDetail.css' %}" media="screen" title="no title">
+  <link rel="stylesheet" href="{% static 'demo/dialog.css' %}" media="screen" title="no title">
+  <link rel="stylesheet" href="{% static 'demo/triangle.css' %}">
+  <link rel ="Shortcut Icon" href={% static favicon.ico %}>
 </head>
 <body>
   <nav class="hd-NavTop">
     <div class="hd-NavTopL1">
       考拉欢迎你！
-      <a href="signin.html">登陆</a>
+      <a href="/login/">登陆</a>
       <span>|</span>
-      <a href="login.html" target="_blank">免费注册</a>
+      <a href="/register/" target="_blank">免费注册</a>
     </div>
     <div class="hd-NavTopL2">
       <a href="http://app.kaola.com">
         <i class="icon icon-mobile"></i>手机考拉海淘
         <span>
-          <img src="img/2dcode-app3.jpg" title="APP QR Code" width="116px" height="116px">
+          <img src="{% static 'img/2dcode-app3.jpg' %}" title="APP QR Code" width="116px" height="116px">
           <strong>下载APP<br>领1000元新人礼包</strong>
           <span class="arrowToTop1"></span>
           <span class="arrowToTop2"></span>
@@ -72,7 +73,7 @@
   <div class="hd-NavBg"></div>
   <header class="hd-index hd-index-primary-layout">
     <div class="hd-index-wrap clearfix">
-      <div class="hd-kaolaLogo"><img src="img/kaolaLogo.png" alt="网易考拉海淘"></div>
+      <div class="hd-kaolaLogo"><img src="{% static 'img/kaolaLogo.png' %}" alt="网易考拉海淘"></div>
       <div class="hd-searchBox">
         <div class="hd-searchTop">
           <div class="searchIpt">
@@ -134,18 +135,18 @@
           <figure class="goods-pic">
             <div class="goods-bigpic" style="position:relative;">
               <div id="mouseArea" style="cursor:crosshair;display:none;width:80px;height:80px;position:absolute;background-color:rgba(200, 255, 200, 0.298039)"></div>
-              <img src="img/loading2.gif" alt="">
+              <img src="{% static 'img/loading2.gif' %}" alt="">
               <i class="icon icon-search-plus"></i>
             </div>
             <div class="goods-showdetail" style="z-index:100">
-              <img src="img/loading2.gif" alt="" style="position:absolute;width:800px;height:800px;"/>
+              <img src="{% static 'img/loading2.gif' %}" alt="" style="position:absolute;width:800px;height:800px;"/>
             </div>
             <div class="goods-thumb clearfix">
               <span class="prev-pic" >&lt;</span>
               <ul>
                 <li class="active-thumb">
                   <a href="javascript:">
-                    <img src="img/loading2.gif" alt="">
+                    <img src="{% static 'img/loading2.gif' %}" alt="">
                   </a>
                 </li>
               </ul>
@@ -188,7 +189,7 @@
                   <select id="s_county" name="s_county"></select>
                   <!-- 导入js -->
                   <!-- <script src="js/jquery-1.12.3.js"></script> -->
-                  <script class="resources library" src="js/plug-in/area.js" type="text/javascript"></script>
+                  <script class="resources library" src="{% static 'js/plug-in/area.js' %}" type="text/javascript"></script>
                   <script type="text/javascript">_init_area();</script>
               </span>
               <span class="free-post">
@@ -247,7 +248,7 @@
               just a box
             </div> -->
             <!-- 下架标识 -->
-            <div class="outline-show" style="width:658px;height:82px;margin-top:16px;background:url(img/xiajia_e0c184e.jpg) no-repeat;display:none;"></div>
+            <div class="outline-show" style="width:658px;height:82px;margin-top:16px;background:url({% static 'img/xiajia_e0c184e.jpg' %}) no-repeat;display:none;"></div>
           </article>
           <aside class="goods-right-nav aside-right">
             <div>
@@ -311,10 +312,10 @@
               </div>
             </div>
             <figure class="detail-picBox">
-              <img src="img/broken.jpg" alt="!图片资源请求超时/地址错误" class="broken-img-alt">
-              <img src="img/broken.jpg" alt="!图片资源请求超时/地址错误" class="broken-img-alt">
-              <img src="img/broken.jpg" alt="!图片资源请求超时/地址错误" class="broken-img-alt">
-              <img src="img/broken.jpg" alt="!图片资源请求超时/地址错误" class="broken-img-alt">
+              <img src="{% static 'img/broken.jpg' %}" alt="!图片资源请求超时/地址错误" class="broken-img-alt">
+              <img src="{% static 'img/broken.jpg' %}" alt="!图片资源请求超时/地址错误" class="broken-img-alt">
+              <img src="{% static 'img/broken.jpg' %}" alt="!图片资源请求超时/地址错误" class="broken-img-alt">
+              <img src="{% static 'img/broken.jpg' %}" alt="!图片资源请求超时/地址错误" class="broken-img-alt">
             </figure>
 
           </div>
@@ -375,7 +376,7 @@
       <div class="guideList">
         <ul class="clearfix">
           <li class="followUs">
-            <img src="img/kaolaLogo.png" alt="" />
+            <img src="{% static 'img/kaolaLogo.png' %}" alt="" />
             <span>
               关注我们
               <i class="sns-icon"></i>
@@ -427,7 +428,7 @@
             </dl>
           </li>
           <li class="download QRcode">
-            <img src="img/2dcode-app3.jpg" alt="APP Download QR code" />
+            <img src="{% static 'img/2dcode-app3.jpg' %}" alt="APP Download QR code" />
             <span>扫描下载手机版</span>
           </li>
         </ul>
@@ -447,22 +448,22 @@
         <a href="#">网易考拉海购</a>
       </div>
       <div class="aboutinfo2">
-        <i><img src="img/f28aa8ee818a42bf832341f605eccefb.png" alt="Police sysmbol of China"></i>
+        <i><img src="{% static 'img/f28aa8ee818a42bf832341f605eccefb.png' %}" alt="Police sysmbol of China"></i>
         <a href="#">浙公网安备 33010002000066号</a>
         <span >增值电信业务经营许可证 ：浙B2-20090185-3</span>
         <span >网络文化经营许可证 ：浙网文[2016]0155-055号</span>
         <span >网易公司版权所有<em>&copy;</em>1997-2016</span>
       </div>
       <div class="aboutinfo3">
-        <img src="img/d720d83b55a04b6f932ea845c673c5bf.png" alt="Trusted website in China">
-        <img src="img/db9ba5060e9e49fabf3f6cc4b8b6ccf7.jpg" alt="National Emblem of the People's Republic of China">
+        <img src="{% static 'img/d720d83b55a04b6f932ea845c673c5bf.png' %}" alt="Trusted website in China">
+        <img src="{% static 'img/db9ba5060e9e49fabf3f6cc4b8b6ccf7.jpg' %}" alt="National Emblem of the People's Republic of China">
       </div>
     </div>
   </footer>
-  <script src="js/vendor/jquery-3.1.0.min.js" charset="utf-8"></script>
-  <script src="js/vendor/jquery.cookie.js" charset="utf-8"></script>
-  <script src="js/plug-in/jquery.fly.min.js" charset="utf-8"></script>
-  <script src="js/plug-in/requestAnimationFrame.js" charset="utf-8"></script>
-  <script src="js/goodDetail.js" charset="utf-8"></script>
+  <script src="{% static 'js/vendor/jquery.js' %}" charset="utf-8"></script>
+  <script src="{% static 'js/vendor/jquery.cookie.js' %}" charset="utf-8"></script>
+  <script src="{% static 'js/plug-in/jquery.fly.min.js' %}" charset="utf-8"></script>
+  <script src="{% static 'js/plug-in/requestAnimationFrame.js' %}" charset="utf-8"></script>
+  <script src="{% static 'js/goodDetail.js' %}" charset="utf-8"></script>
 </body>
 </html>
